# plantera

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: authentication.rs  main.rs  models.rs  utils.rs
backend/src/models/: mod.rs  plant.rs  user.rs
backend/src/routes/: mod.rs  plant_routes.rs  user_routes.rs
frontend/android/: settings.gradle
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/res/layout/: activity_main.xml
frontend/android/app/src/main/res/values-night/: themes.xml
frontend/android/gradle/wrapper/: gradle-wrapper.properties
frontend/web/: package.json  tailwind.config.js
frontend/web/public/: index.html
frontend/web/src/: App.tsx  apiUrl.ts  base.scss  index.css  index.scss  index.tsx  utils.ts
frontend/web/src/api/: loginApi.ts  plantApi.ts
frontend/web/src/app/: store.ts
frontend/web/src/models/: plant.ts
frontend/web/src/pages/: HomePage.tsx  LoginPage.tsx  PlantListPage.tsx  PlantPage.tsx  SettingsPage.tsx
frontend/web/src/pages/home/: HomePage.tsx
frontend/web/src/pages/login/: LoginPage.tsx  loginPage.module.scss  loginPageApi.ts
frontend/web/src/pages/plant/: PlantPage.tsx  plantPage.module.scss
frontend/web/src/pages/plantlist/: PlantListPage.tsx  plantListPage.module.scss  plantListSlice.ts
frontend/web/src/pages/plants/: PlantsPage.tsx  plantPage.module.scss  plantsApi.ts
frontend/web/src/pages/settings/: SettingsPage.tsx  settingsPage.module.scss
frontend/web/src/slices/: plantListSlice.ts
(+4 files in other folders)
